# eventemitter-eventloop

./: .editorconfig  CMakeLists.txt  LICENSE.md  README.md
cmake/Modules/: FindGSL.cmake  FindUnitTest++.cmake
include/: Emitter.h  EventEmitter.h  EventLoop.h  Registry.h  TypeTag.h
src/: CMakeLists.txt  Emitter.cpp  EventEmitter.cpp  EventLoop.cpp  Registry.cpp  main.cpp  test.cpp
src/Core/: Application.cpp  Application.h  Backend.h  CMakeLists.txt  EventEmitter.cpp  EventEmitter.h  EventLoop.cpp  EventLoop.h  Log.h  TypeTag.h
test/: CMakeLists.txt  Log.h  generic_test.cpp
